# TitanMedia

./: .gitignore  CMakeLists.txt  Proyecto TitanMedia.md  Proyecto: TitanMedia  config.example.json  index.js  package-lock.json  package.json
scripts/: setup-deps.js
src/main/: database.js  main.cpp  twitch-integration.js
src/renderer/: index.html  input.css  output.css  preload.js  renderer.js
src/renderer/overlays/basic-alert/: index.html  script.js  style.css
src/renderer/overlays/gaming-basic/: index.html  script.js  style.css
